@@ -181,7 +181,7 @@ let ocaml_pexp_newtype = Some (fun s e -> Pexp_newtype (s, e));;
 
 let ocaml_pexp_object = Some (fun cs -> Pexp_object cs);;
 
-let ocaml_pexp_open = Some (fun li e -> Pexp_open (mknoloc li, e));;
+let ocaml_pexp_open = Some (fun li e -> Pexp_open (Fresh, mknoloc li, e));;
 
 let ocaml_pexp_override sel =
   let sel = List.map (fun (s, e) -> mknoloc s, e) sel in Pexp_override sel
@@ -257,7 +257,7 @@ let ocaml_psig_module s mt = Psig_module (mknoloc s, mt);;
 
 let ocaml_psig_modtype s mtd = Psig_modtype (mknoloc s, mtd);;
 
-let ocaml_psig_open li = Psig_open (mknoloc li);;
+let ocaml_psig_open li = Psig_open (Fresh, mknoloc li);;
 
 let ocaml_psig_recmodule =
   let f ntl =
@@ -287,7 +287,7 @@ let ocaml_pstr_modtype s mt = Pstr_modtype (mknoloc s, mt);;
 
 let ocaml_pstr_module s me = Pstr_module (mknoloc s, me);;
 
-let ocaml_pstr_open li = Pstr_open (mknoloc li);;
+let ocaml_pstr_open li = Pstr_open (Fresh, mknoloc li);;
 
 let ocaml_pstr_primitive s vd = Pstr_primitive (mknoloc s, vd);;
 
